--- a/app/src/main/res/layout/weather_cardview_item.xml
+++ b/app/src/main/res/layout/weather_cardview_item.xml
@@ -60,7 +60,7 @@
                     android:layout_marginTop="@dimen/textview_margin" />
 
                 <TextView
-                    android:id="@+id/humidity"
+                    android:id="@+id/relwet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Влажность: 78 %"
@@ -82,7 +82,7 @@
                 android:textSize="48dp" />
 
             <TextView
-                android:id="@+id/itemTemperature"
+                android:id="@+id/min_max_Temperature"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="-27 | -30"
