--- a/app/src/main/res/layout/activity_full_forecast.xml
+++ b/app/src/main/res/layout/activity_full_forecast.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:title="@string/app_name"
+            android:id="@+id/toolbar_full"
+            android:title=""
             android:background="@color/primary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
