--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_below="@+id/appbarlayout"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="@dimen/cardview_margin"
         android:layout_centerHorizontal="true">
     </android.support.v7.widget.RecyclerView>
 
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Данных нет \nНажмите кнопку &quot;Обновить&quot;"
+        android:text="@string/data_is_null"
         android:id="@+id/press_refresh"
         android:gravity="center_vertical|center_horizontal"
         android:layout_centerVertical="true"
