--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="cardview_margin">10dp</dimen>
     <dimen name="textview_margin">4dp</dimen>
+    <dimen name="sizeTempr">22dp</dimen>
 </resources>
