--- a/app/src/main/res/layout/activity_full_forecast.xml
+++ b/app/src/main/res/layout/activity_full_forecast.xml
@@ -89,7 +89,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/wind"
             android:layout_marginBottom="@dimen/textview_margin"
-            android:text="@string/wind"
+            android:text="@string/wind_p"
             android:layout_below="@+id/pressure"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
