--- a/app/src/main/res/values/tags.xml
+++ b/app/src/main/res/values/tags.xml
@@ -23,5 +23,6 @@
     <string name="max">max</string>
     <string name="min">min</string>
 
+    <string name="KEY_GISMETEO">KEY_GISMETEO</string>
 
 </resources>
