--- a/app/src/main/res/layout/fragment_full_forecast.xml
+++ b/app/src/main/res/layout/fragment_full_forecast.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/fragmentFullForecast"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -11,14 +10,7 @@
         android:id="@+id/appbarlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar_full"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:background="@color/primary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </android.support.v7.widget.Toolbar>
+        <include layout="@layout/toolbar"/>
     </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
