--- a/app/src/main/res/layout/weather_cardview_item.xml
+++ b/app/src/main/res/layout/weather_cardview_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:weightSum="1">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
@@ -14,8 +15,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/accent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:background="@color/accent">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -30,13 +31,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/Morning"
-                    android:textColor="@color/primary_text" />
+                    android:textColor="@color/primary_text"/>
 
                 <View
                     android:id="@+id/lineView"
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
-                    android:background="?android:attr/listDivider" />
+                    android:background="?android:attr/listDivider"/>
 
 
                 <TextView
@@ -44,29 +45,29 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/textview_margin"
-                    android:text="@string/aboutWeather" />
+                    android:text="@string/aboutWeather"/>
 
                 <TextView
                     android:id="@+id/wind"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:text="@string/wind" />
+                    android:text="@string/wind"/>
 
                 <TextView
                     android:id="@+id/pressure"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/pressure"
-                    android:layout_marginTop="@dimen/textview_margin" />
+                    android:layout_marginTop="@dimen/textview_margin"
+                    android:text="@string/pressure"/>
 
                 <TextView
                     android:id="@+id/relwet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/relwet"
+                    android:layout_marginBottom="@dimen/textview_margin"
                     android:layout_marginTop="@dimen/textview_margin"
-                    android:layout_marginBottom="@dimen/textview_margin"/>
+                    android:text="@string/relwet"/>
             </LinearLayout>
 
             <TextView
@@ -79,18 +80,18 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="25dp"
                 android:text="@string/celcium"
-                android:textSize="48sp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="48sp"/>
 
             <TextView
                 android:id="@+id/min_max_Temperature"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/min_max_tempr_item"
-                android:textSize="@dimen/sizeTempr"
-                android:layout_below="@+id/now_temperature"
+                android:layout_alignEnd="@+id/now_temperature"
                 android:layout_alignRight="@+id/now_temperature"
-                android:layout_alignEnd="@+id/now_temperature" />
+                android:layout_below="@+id/now_temperature"
+                android:text="@string/min_max_tempr_item"
+                android:textSize="@dimen/sizeTempr"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
