Set name of city in Title of Toolbar replace Toolbar in Activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/activityMain"
+    android:id="@+id/container"
     tools:context=".Activity.ForecastActivity">
+
+    <include layout="@layout/toolbar"/>
 
 </FrameLayout>
