--- a/app/src/main/res/layout/activity_city.xml
+++ b/app/src/main/res/layout/activity_city.xml
@@ -7,4 +7,6 @@
     android:layout_height="match_parent"
     tools:context="ru.whalemare.weather.Activity.CityActivity">
 
+    <include layout="@layout/toolbar"/>
+
 </RelativeLayout>
