--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,10 +10,8 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbarlayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <include layout="@layout/toolbar"/>
-
+        android:layout_height="?attr/actionBarSize"
+        android:visibility="invisible">
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
