--- a/app/src/main/res/layout/fragment_full_forecast.xml
+++ b/app/src/main/res/layout/fragment_full_forecast.xml
@@ -4,7 +4,7 @@
                 android:id="@+id/fragmentFullForecast"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                tools:context=".Activity.FullForecastActivity">
+                tools:context=".activity.FullForecastActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbarlayout"
