--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-        <color name="primary">#57C3E8</color>
-        <color name="primary_dark">#4E5F70</color>
-        <color name="accent">#FECA5F</color>
-        <color name="primary_light">#FFE0B2</color>
-        <color name="primary_text">#212121</color>
+        <color name="primary">#009688</color>
+        <color name="primary_dark">#00695C</color>
+        <color name="accent">#00BFA5</color>
+        <color name="primary_light">#80CBC4</color>
+        <color name="primary_text">#00695C</color>
         <color name="secondary_text">#727272</color>
         <color name="icons">#212121</color>
         <color name="divider">#B6B6B6</color>
