--- a/app/src/main/res/layout/item_city.xml
+++ b/app/src/main/res/layout/item_city.xml
@@ -5,8 +5,7 @@
     android:layout_height="70dp"
     android:layout_marginBottom="5dp"
     android:layout_marginTop="5dp"
-    android:background="?attr/selectableItemBackground"
-    android:clickable="true">
+    android:foreground="?android:attr/selectableItemBackground">
 
     <RelativeLayout
         android:layout_width="match_parent"
