--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -14,14 +14,21 @@
         android:visibility="invisible">
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView_weathers"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/appbarlayout"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"
+        android:layout_below="@+id/appbarlayout">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView_weathers"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center">
+        </android.support.v7.widget.RecyclerView>
+
+
 
     <TextView
         android:id="@+id/press_refresh"
@@ -33,5 +40,7 @@
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/data_is_null"
         android:textAppearance="?android:attr/textAppearanceLarge"/>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
