--- a/app/src/main/res/layout/activity_chart.xml
+++ b/app/src/main/res/layout/activity_chart.xml
@@ -4,22 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ru.whalemare.weather.activity.ChartActivity">
 
-    <HorizontalScrollView
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/linechart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <view
-            android:id="@+id/line_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            class="ru.whalemare.weather.charts.LineView"/>
-
-    </HorizontalScrollView>
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
