Create stub-dialog for choose range

--- a/app/src/main/res/layout/dialog_view.xml
+++ b/app/src/main/res/layout/dialog_view.xml
@@ -3,10 +3,19 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <Spinner
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-    </Spinner>
+    <android.support.v7.widget.AppCompatSpinner
+        android:id="@+id/spinner_from"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+    </android.support.v7.widget.AppCompatSpinner>
+
+    <android.support.v7.widget.AppCompatSpinner
+        android:id="@+id/spinner_to"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+    </android.support.v7.widget.AppCompatSpinner>
 
 </LinearLayout>
