--- a/app/src/main/res/layout/forecast_widget.xml
+++ b/app/src/main/res/layout/forecast_widget.xml
@@ -1,10 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
-                android:padding="@dimen/widget_margin">
+                android:background="@color/white">
 
     <LinearLayout
+        android:id="@+id/widget_layout"
+        android:clickable="true"
         android:layout_margin="16dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -23,9 +24,6 @@
             android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
             android:id="@+id/linearLayout2">
 
             <TextView
@@ -35,10 +33,7 @@
                 android:textColor="@android:color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/imageView"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_gravity="right"/>
+                android:layout_gravity="end"/>
 
             <TextView
                 android:id="@+id/textview_widget_tod"
@@ -47,10 +42,7 @@
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textView_widget_city_name"
-                android:layout_alignRight="@+id/textView_widget_city_name"
-                android:layout_alignEnd="@+id/textView_widget_city_name"
-                android:layout_gravity="right"/>
+                android:layout_gravity="end"/>
 
             <TextView
                 android:id="@+id/textview_widget_temperature"
@@ -59,10 +51,7 @@
                 android:textColor="@android:color/black"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/textview_widget_tod"
-                android:layout_toLeftOf="@+id/textview_widget_tod"
-                android:layout_toStartOf="@+id/textview_widget_tod"
-                android:layout_gravity="right"/>
+                android:layout_gravity="end"/>
 
         </LinearLayout>
 
